--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/server": "10.0.0-proxy-alpha.70",
     "nanoid": "^4.0.0",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "node-fetch": "^3.2.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
