--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.1.0",
     "tailwindcss": "^3.1.6",
     "tsx": "^3.9.0",
