--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@trpc/next": "10.0.0-proxy-alpha.70",
     "@trpc/react": "10.0.0-proxy-alpha.70",
     "@trpc/server": "10.0.0-proxy-alpha.70",
+    "classnames": "^2.3.1",
     "nanoid": "^4.0.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "node-fetch": "^3.2.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.3.0",
     "superjson": "^1.9.1",
+    "tabler-icons-react": "^1.54.0",
     "ws": "^8.8.1",
     "zod": "^3.18.0"
   },
